--- a/EventsApp/public/modules/core/views/home.client.view.html
+++ b/EventsApp/public/modules/core/views/home.client.view.html
@@ -1,94 +1,23 @@
 <section data-ng-controller="HomeController">
-	<div class="jumbotron text-center">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-12">
-				<img alt="MEAN.JS" class="img-responsive text-center" src="modules/core/img/brand/logo.png" />
-			</div>
-		</div>
-		<br>
-		<div class="row">
-			<p class="lead">
-				Open-Source Full-Stack Solution For MEAN Applications
-			</p>
-		</div>
-		<div class="row">
-			<p>
-				<a class="btn btn-primary btn-lg" href="http://meanjs.org" target="_blank">Learn more</a>
-			</p>
-		</div>
-	</div>
-	<div>
-		<h2>Congrats! You've configured and run the sample application.</h2>
-		<p>MEAN.JS is a web application boilerplate, which means you should start changing everything :-)</p>
-		<p>This sample application tracks users and articles.</p>
-		<ul>
-			<li>
-				Click
-				<em>Signup</em>
-				to get started.
-			</li>
-			<li>
-				Configure your app to work with your social accounts, by editing the
-				<em>/config/env/*.js</em>
-				files.
-			</li>
-			<li>
-				Edit your users module.
-			</li>
-			<li>
-				Add new CRUD modules.
-			</li>
-			<li>
-				Have fun...
-			</li>
-		</ul>
-	</div>
-	<div class="row">
-		<div class="col-md-3">
-			<h2>
-				<strong>M</strong>ongoDB
-			</h2>
-			<p><a target="_blank" href="http://mongodb.org/">MongoDB</a> is a database. MongoDB's <a target="_blank" href="http://docs.mongodb.org/manual/">great manual</a> is the place to get started with NoSQL and MongoDB.</p>
-		</div>
-		<div class="col-md-3">
-			<h2>
-				<strong>E</strong>xpress
-			</h2>
-			<p><a target="_blank" href="http://expressjs.com/"> Express</a> is an app server. Check out <a target="_blank" href="http://expressjs.com/guide.html">The Express Guide</a> or <a target="_blank" href="http://stackoverflow.com/questions/8144214/learning-express-for-node-js">StackOverflow</a> for more info.</p>
-		</div>
-		<div class="col-md-3">
-			<h2>
-				<strong>A</strong>ngularJS
-			</h2>
-			<p>AngularJS is web app framework. <a target="_blank" href="http://angularjs.org/">Angular's website</a> offers a lot. The <a target="_blank" href="http://www.thinkster.io/">Thinkster Popular Guide</a> and <a target="_blank" href="https://egghead.io/">Egghead Videos</a> are great resources.</p>
-		</div>
-		<div class="col-md-3">
-			<h2>
-				<strong>N</strong>ode.js
-			</h2>
-			<p><a target="_blank" href="http://nodejs.org/">Node.js</a> is a web server. Node's website and this <a target="_blank" href="http://stackoverflow.com/questions/2353818/how-do-i-get-started-with-node-js">stackOverflow thread</a> offer excellent starting points to get to grasps with node.</p>
-		</div>
-	</div>
-	<div class="well">
-		<h2>MEAN.JS Documentation</h2>
-		<p>
-			Once you're familiar with the foundation technology, check out the MEAN.JS Documentation:
-			<ul>
-				<li><a target="_blank" href="http://meanjs.org/docs.html">MEAN.JS Documentation</a>
-				</li>
-				<li><a target="_blank" href="http://meanjs.org/generator.html">Yeoman Generator</a>
-				</li>
-				<li><a target="_blank" href="http://meanjs.org/modules.html">Modules</a>
-				</li>
-				<li><a target="_blank" href="http://meanjs.org/changelog.html">Changelog</a>
-				</li>
-				<li><a target="_blank" href="http://meanjs.org/community.html">Community</a>
-				</li>
-				<li><a target="_blank" href="http://blog.meanjs.org">Blog</a>
-				</li>
-			</ul>
-		</p>
-	</div>
-	<br>Enjoy &amp; Keep Us Updated,
-	<br>The MEAN.JS Team.
+	<div class="start_descrition option animated fadeInDownBig">
+      <a href="#" class="start_logo"><img src="img/logo.png" alt="Eventa"/></a>
+      <h1>Eventos + Hoteles!<span></span></h1>
+      <span>¿Fútbol, música, comida?, Eventos con hotel incluido para que disfrutes al máximo de tu experiencia! </span>
+        <div class="btns"><a href="/#!/events" class="green" style="cursor:pointer">A disfrutar!</a></div>
+    </div>
+    <div class="animation">
+        <img src="img/start/01.png" class="option animated fadeInDownBig one_element" alt="#">
+        <img src="img/start/02.png" class="option animated fadeInDownBig two_element" alt="#">
+        <img src="img/start/03.png" class="option animated fadeInDownBig three_element" alt="#">
+        <img src="img/start/04.png" class="option animated fadeInDownBig four_element" alt="#">
+        <img src="img/start/05.png" class="option animated fadeInDownBig five_element" alt="#">
+        <img src="img/start/06.png" class="option animated fadeInDownBig six_element" alt="#">
+        <img src="img/start/07.png" class="option animated fadeInRightBig seven_element" alt="#">
+        <img src="img/start/08.png" class="option animated fadeInLeftBig eight_element" alt="#">
+        <img src="img/start/09.png" class="option animated fadeInDownBig nine_element" alt="#">
+        <img src="img/start/10.png" class="option animated fadeInUpBig ten_element" alt="#">
+        <img src="img/start/11.png" class="option animated fadeInUpBig quote_element" alt="#">
+        <img src="img/start/12.png" class="option animated fadeInUpBig quote_two_element" alt="#">
+    </div>
+    <div class="bgg"></div>
 </section>
