Add invite button and page

--- a/EventsApp/public/css/main.css
+++ b/EventsApp/public/css/main.css
@@ -2112,7 +2112,7 @@ a:hover {
 
     .menu.mobile #close_menu {display: none;}
 
-
+.crop {width:100px;overflow:hidden;height:50px;line-height:50px;}
 
 
 
