--- a/EventsApp/public/modules/events/views/events.client.view.html
+++ b/EventsApp/public/modules/events/views/events.client.view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="EventsController" class="indexpage">
+<section id="evmain" data-ng-controller="EventsController" class="indexpage">
 	<div class="menu-btn">&#9776;</div>
 <nav class="pushy pushy-left">
 <div class="profile">
@@ -21,7 +21,7 @@
 <div class="add_place none" id="pl">
 <div class="place_form">
 <i class="fa fa-times close_window" id="close"></i>
-<h3>Add new place<span></span></h3>
+<h3>Search event<span></span></h3>
 <form>
 <label>Place name:<input type="text"></label>
 <label>latitude:<input type="text"></label>
@@ -36,7 +36,7 @@
 <option value="Bank">Bank</option>
 </select>
 </label>
-<a href="01.html#" class="green_btn_header" id="add">Add</a>
+<a href="01.html#" class="green_btn_header" id="add">Search</a>
 </form>
 </div>
 </div>
@@ -61,7 +61,7 @@
 <div class="container-fluid header">
 <div class="row">
 <div class="col-md-12"><a href="/#!/" class="logo"><img src="img/logo.png" alt="Eventa"/></a>
-<input type="text" class="search" placeholder="search"><a href="01.html#" class="green_btn_header" id="ad">Add place</a></div>
+<input type="text" class="search" placeholder="search"><a href="01.html#" class="green_btn_header" id="ad">Find Event</a></div>
 </div>
 </div>
 
