Add invitation page

--- a/EventsApp/public/modules/core/views/home.client.view.html
+++ b/EventsApp/public/modules/core/views/home.client.view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="HomeController">
+<section data-ng-controller="HomeController" class="promo">
 	<div class="start_descrition option animated fadeInDownBig">
       <a href="#" class="start_logo"><img src="img/logo.png" alt="Eventa"/></a>
       <h1>Eventos + Hoteles!<span></span></h1>
