--- a/EventsApp/public/css/main.css
+++ b/EventsApp/public/css/main.css
@@ -1,7 +1,7 @@
 /*////////////////////////////////////////////////////////////*/
 /*//////////////////// General styles ////////////////////////*/
 /*////////////////////////////////////////////////////////////*/
-body {
+section.promo {
     background: url("../img/start/bg.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
