--- a/EventsApp/public/modules/core/views/header.client.view.html
+++ b/EventsApp/public/modules/core/views/header.client.view.html
@@ -1,28 +1,20 @@
-<div class="container" data-ng-controller="HeaderController">
+<section data-ng-controller="HeaderController">
+<header class="navbar navbar-fixed-top" data-ng-controller="HeaderController">
+
+<div class="container">
 	<div class="navbar-header">
-		<button class="navbar-toggle" type="button" data-ng-click="toggleCollapsibleMenu()">
+		<button class="navbar-toggle" style="background-color:#218dea" type="button" data-ng-click="toggleCollapsibleMenu()">
 			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
+			<span class="icon-bar" style="background-color:#fff"></span>
+			<span class="icon-bar" style="background-color:#fff"></span>
+			<span class="icon-bar" style="background-color:#fff"></span>
 		</button>
-		<a href="/#!/" class="navbar-brand">EventsApp</a>
+		<a href="/#!/events" class="navbar-brand">
+			<img src="img/logo.png" alt="Eventa"/>
+		</a>
 	</div>
-	<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation">
-		<ul class="nav navbar-nav" data-ng-if="menu.shouldRender(authentication.user);">
-			<li data-ng-repeat="item in menu.items | orderBy: 'position'" data-ng-if="item.shouldRender(authentication.user);" ng-switch="item.menuItemType" ui-route="{{item.uiRoute}}" class="{{item.menuItemClass}}" ng-class="{active: ($uiRoute)}" dropdown="item.menuItemType === 'dropdown'">
-				<a ng-switch-when="dropdown" class="dropdown-toggle">
-					<span data-ng-bind="item.title"></span>
-					<b class="caret"></b>
-				</a>
-				<ul ng-switch-when="dropdown" class="dropdown-menu">
-					<li data-ng-repeat="subitem in item.items | orderBy: 'position'" data-ng-if="subitem.shouldRender(authentication.user);" ui-route="{{subitem.uiRoute}}" ng-class="{active: $uiRoute}">
-						<a href="/#!/{{subitem.link}}" data-ng-bind="subitem.title"></a>
-					</li>
-				</ul>
-				<a ng-switch-default href="/#!/{{item.link}}" data-ng-bind="item.title"></a>
-			</li>
-		</ul>
+	<nav class="collapse navbar-collapse" collapse="!isCollapsed" role="navigation" style="height: 0px;">
+		<!-- ngIf: menu.shouldRender(authentication.user); -->
 		<ul class="nav navbar-nav navbar-right" data-ng-hide="authentication.user">
 			<li ui-route="/signup" ng-class="{active: $uiRoute}">
 				<a href="/#!/signup">Sign Up</a>
@@ -32,10 +24,10 @@
 				<a href="/#!/signin">Sign In</a>
 			</li>
 		</ul>
-		<ul class="nav navbar-nav navbar-right" data-ng-show="authentication.user">
+		<ul class="nav navbar-nav navbar-right ng-hide" data-ng-show="authentication.user">
 			<li class="dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-					<span data-ng-bind="authentication.user.displayName"></span> <b class="caret"></b>
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<span data-ng-bind="authentication.user.displayName" class="ng-binding"></span> <b class="caret"></b>
 				</a>
 				<ul class="dropdown-menu">
 					<li>
@@ -44,7 +36,7 @@
 					<li>
 						<a href="/#!/settings/accounts">Manage Social Accounts</a>
 					</li>
-					<li data-ng-show="authentication.user.provider === 'local'">
+					<li data-ng-show="authentication.user.provider === 'local'" class="ng-hide">
 						<a href="/#!/settings/password">Change Password</a>
 					</li>
 					<li class="divider"></li>
@@ -56,3 +48,39 @@
 		</ul>
 	</nav>
 </div>
+
+<!-- <a id="hamburger" class="mm-fixed-top mm-slideout" href="" style="z-index:99"><span></span></a>
+<nav id="mymenu" class="mm-menu mm-horizontal mm-white mm-slide mm-offcanvas mm-hasheader mm-hassearch" style="z-index:99">
+	    <div class="mm-header">
+	        <a class="mm-prev" style="display: none;"></a>
+	        <span class="mm-title"><img src="img/logo.png" alt="Eventa"/></span>
+	        <a class="mm-next" style="display: none;"></a>
+	    </div>
+	    <ul class="mm-list mm-panel mm-opened mm-current" id="mm-0">
+	        <li><a href="/"><i class="fa fa-home"></i> &nbsp; Pending</a></li>
+	        <li><a href="/"><i class="fa fa-code"></i> &nbsp; Purchases</a></li>
+	        <li><a href="/#!support"><i class="fa fa-support"></i> &nbsp; Support</a></li>
+	    </ul>
+	</nav>
+	<div id="mm-blocker" class="mm-slideout"></div> -->
+
+	
+
+
+
+
+</header>
+	
+
+
+	<!--div class="row">
+		<div class="col-md-12">
+			<a href="/#!/events" class="logo">
+				<img src="img/logo.png" alt="Eventa"/>
+			</a>
+			<input type="text" class="search" placeholder="search">
+				<a href="" class="green_btn_header" id="ad">Find Event</a>
+		</div>
+	</div -->
+	
+</section>
