--- a/EventsApp/public/modules/invite/views/hotels.client.view.html
+++ b/EventsApp/public/modules/invite/views/hotels.client.view.html
@@ -16,11 +16,11 @@
 					<div class="cols">
 						<div id="hacker-list">
     						<input class="search" />
-    						<button type="button" class="btn btn-primary" data-sort="name">Invite your friend!</button>
+    						<button type="button" class="btn btn-primary" data-sort="name">Search hotel!</button>
 						    <ul class="list">
-						       <li ng-repeat="friend in friends">
-						           <h3 class="name">{{friend.name}}</h3>
-						           <p class="city"><img alt src='{{friend.picture}}'></p>
+						       <li ng-repeat="hotel in hotels">
+						           <h3 class="name">{{hotel.name}}</h3>
+						           <p><img alt src='{{hotel.picture}}'></p>
 						       </li>
 						    </ul>
 						</div>
