--- a/EventsApp/public/modules/events/views/events.client.view.html
+++ b/EventsApp/public/modules/events/views/events.client.view.html
@@ -6,9 +6,9 @@
     <div data-ng-include="'/modules/core/views/header.client.view.html'">
     </div>
 
-    <!-- Footer menu -->
+    <!-- Footer menu 
     <div class="container-fluid menu mobile" data-ng-include="'/modules/core/views/footer.client.view.html'">
-    </div>
+    </div>-->
 
     <!--map-->
     <div id="map" class="map"></div>
