--- a/EventsApp/public/modules/invite/views/hotels.client.view.html
+++ b/EventsApp/public/modules/invite/views/hotels.client.view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="InviteController" class="indexpage">
+<section data-ng-controller="HotelsController" class="indexpage">
 	<div class="site-overlay"></div>
 
 	<!-- Header -->
@@ -6,28 +6,45 @@
 	</div>
 
 	<div class="container contant">
-		<div class="row" data-ng-show="authentication.user">
-			<div class="col-md9 basic">
-				<div class="head"></div>
-				<div class="header_section" style="background:url({{event.logo}}) no-repeat;">
-					<h1>{{event.name}}</h1>
-				</div>
-				<div class="icon_descr_block">
-					<div class="cols">
-						<div id="hacker-list">
-    						<input class="search" />
-    						<button type="button" class="btn btn-primary" data-sort="name">Search hotel!</button>
-						    <ul class="list">
-						       <li ng-repeat="hotel in hotels">
-						           <h3 class="name">{{hotel.name}}</h3>
-						           <p><img alt src='{{hotel.picture}}'></p>
-						       </li>
-						    </ul>
+		<div data-ng-show="authentication.user">
+			<div class="row">
+				<div class="head" style="margin-top:15px;"></div>
+				<div class="col-md9 basic">
+					<div class="thumbnail">
+			      		<img src="{{event.logo || nologo}}" alt="...">
+				     	<div class="caption">
+				        	<h3>{{event.name || noName}}</h3>
+				        	<p>{{event.description || noDesc}}</p>
+				        	<p ng-if="event"><a href="#" class="btn btn-primary" role="button">More Info</a> <a href="#" class="btn btn-default" role="button">Change event</a></p>
+				      	</div>
+				    </div>
+					<!-- div class="header_section" style="background:url({{event.logo}}) no-repeat;">
+						<h1>{{event.name}}</h1>
+					</div -->
+					<div class="col-md-3"></div>
+					<div class="col-md-6">
+						<div class="cols">
+							<div class="list-group" id="hacker-list">
+								<h4><input class="search" placeholder="Search your hotel"/>
+								Total friends invited: <span class="badge" ng-bind="num"></span>
+								</h4>
+								<hr>
+  								<a href="" class="list-group-item" ng-repeat="hotel in hotels" ng-click="book({{hotel}});">
+    								<h4 class="list-group-item-heading"><img class="thumbnail" style="height:120px" alt src='img/hotel.jpg'> {{hotel.name}}</h4>
+    								<p class="list-group-item-text"><h3>Touch for booking <button class="btn btn-warning" role="button">{{hotel.price}}</button></h3></p>
+  								</a>
+							</div>
 						</div>
 					</div>
+					<div class="col-md-3"></div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md9 basic">
 				</div>
 			</div>
 		</div>
+
 		<div class="row" data-ng-show="!authentication.user">
 			<div class="col-md9 basic">
 				<div class="head"></div>
@@ -60,3 +77,4 @@
 	<div class="container-fluid menu mobile" data-ng-include="'/modules/core/views/footer.client.view.html'">
 	</div> -->
 </section>
+
