--- a/EventsApp/public/modules/core/views/header.client.view.html
+++ b/EventsApp/public/modules/core/views/header.client.view.html
@@ -34,6 +34,8 @@
 			</li>
 		</ul>
 		<ul class="nav navbar-nav navbar-right ng-hide" data-ng-show="authentication.user">
+			<li><a href="/#!/pending">Pending <span class="badge">2</span></a></li>
+			<li><a href="/#!/bookings">Bookings</a></li>
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					<span data-ng-bind="authentication.user.displayName" class="ng-binding"></span> <b class="caret"></b>
