--- a/EventsApp/public/modules/invite/views/pending.client.view.html
+++ b/EventsApp/public/modules/invite/views/pending.client.view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="HotelsController" class="indexpage">
+<section data-ng-controller="PendingController" class="indexpage">
 	<div class="site-overlay"></div>
 
 	<!-- Header -->
@@ -7,20 +7,13 @@
 
 	<div class="container contant">
 		<div class="head" style="margin-top:15px;"></div>
-		<div data-ng-show="authentication.user && booked">
-			<div class="alert alert-success" role="alert">
-        		<strong>Congratulations </strong> your event + hotel has booked OK!, <a href="/#!/bookings">See my bookings</a>
-      		</div>
-		</div>
-		<div data-ng-show="authentication.user && !booked">
+		<div data-ng-show="authentication.user">
 			<div class="row">
 				<div class="col-md9 basic">
 					<div class="thumbnail">
-			      		<img src="{{event.logo || nologo}}" alt="...">
 				     	<div class="caption">
-				        	<h3>{{event.name || noName}}</h3>
-				        	<p>{{event.description || noDesc}}</p>
-				        	<p ng-if="event"><a href="#" class="btn btn-primary" role="button">More Info</a> <a href="#" class="btn btn-default" role="button">Change event</a></p>
+				        	<h3>Pending events</h3>
+				        	<p>Please confirm your pending events and enjoy it!!</p>
 				      	</div>
 				    </div>
 					<!-- div class="header_section" style="background:url({{event.logo}}) no-repeat;">
@@ -30,13 +23,15 @@
 					<div class="col-md-6">
 						<div class="cols">
 							<div class="list-group" id="hacker-list">
-								<h4><input class="search" placeholder="Search your hotel"/>
-								Total friends invited: <span class="badge" ng-bind="num"></span>
-								</h4>
+								<h4><input class="search" style="width:100%" placeholder="Search your invitations"/></h4>
 								<hr>
-  								<a href="" class="list-group-item" ng-repeat="hotel in hotels" ng-click="book({{hotel}});">
-    								<h4 class="list-group-item-heading"><img class="thumbnail" style="height:120px" alt src='img/hotel.jpg'> {{hotel.name}}</h4>
-    								<p class="list-group-item-text"><h3>Touch for booking <button class="btn btn-warning" role="button">{{hotel.price}}</button></h3></p>
+  								<a href="" class="list-group-item" ng-repeat="invite in listinvites.invited">
+    								<h4 class="list-group-item-heading"><img class="thumbnail" style="height:120px" alt src='img/ev.jpeg'> {{invite.invitationId}}</h4>
+    								<p class="list-group-item-text"><h3><button class="btn btn-warning" role="button" ng-click="closeBooking('{{invite.invitationId}}');">Confirm invitation</button>
+    								<button ng-if="{{invite.status}}" class="btn btn-success" role="button">OK</button>
+    								</h3>
+    								Total friends invited: <span class="badge">2</span>
+    								</p>
   								</a>
 							</div>
 						</div>
